tests/spec/parse/snapshots/enum_struct_variant.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Message {
    Move { x: int, y: int },
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Message",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 7,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Move",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 18,
                    byte_length: 4,
                },
                fields: Struct(
                    [
                        EnumFieldDefinition {
                            name: "x",
                            name_span: Span {
                                file_id: 0,
                                byte_offset: 25,
                                byte_length: 1,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        EnumFieldDefinition {
                            name: "y",
                            name_span: Span {
                                file_id: 0,
                                byte_offset: 33,
                                byte_length: 1,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 36,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 43,
        },
    },
]
