tests/spec/parse/snapshots/enum_struct_variant_single_field.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Event {
    Click { x: int },
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Event",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 5,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Click",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 5,
                },
                fields: Struct(
                    [
                        EnumFieldDefinition {
                            name: "x",
                            name_span: Span {
                                file_id: 0,
                                byte_offset: 24,
                                byte_length: 1,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 27,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 34,
        },
    },
]
