tests/spec/parse/snapshots/enum_trailing_comma.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Color {
    Red,
    Green,
    Blue,
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Color",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 5,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Red",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 16,
                    byte_length: 3,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Green",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 23,
                    byte_length: 5,
                },
                fields: Unit,
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Blue",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 32,
                    byte_length: 4,
                },
                fields: Unit,
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 38,
        },
    },
]
