tests/spec/parse/snapshots/enum_tuple_variant_function_type_field.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum E {
    V(fn(int) -> int)
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "E",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 1,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                name: "V",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 12,
                    byte_length: 1,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Function {
                                params: [
                                    Constructor {
                                        name: "int",
                                        params: [],
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 17,
                                            byte_length: 3,
                                        },
                                    },
                                ],
                                return_type: Constructor {
                                    name: "int",
                                    params: [],
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 25,
                                        byte_length: 3,
                                    },
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 14,
                                    byte_length: 14,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 30,
        },
    },
]
