tests/spec/parse/snapshots/enum_variant_rest_pattern.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  enum Shape { Triangle(int, int, int), Circle(float) }
  fn test(s: Shape) {
    match s {
      Shape.Triangle(..) => print("triangle"),
      Shape.Circle(..) => print("circle"),
    }
  }
---
[
    Enum {
        doc: None,
        attributes: [],
        name: "Shape",
        name_span: Span {
            file_id: 0,
            byte_offset: 6,
            byte_length: 5,
        },
        generics: [],
        variants: [
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Triangle",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 14,
                    byte_length: 8,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 23,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        EnumFieldDefinition {
                            name: "field1",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 28,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        EnumFieldDefinition {
                            name: "field2",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "int",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 33,
                                    byte_length: 3,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
            EnumVariant {
                doc: None,
                attributes: [],
                name: "Circle",
                name_span: Span {
                    file_id: 0,
                    byte_offset: 39,
                    byte_length: 6,
                },
                fields: Tuple(
                    [
                        EnumFieldDefinition {
                            name: "field0",
                            name_span: Span {
                                file_id: 4294967295,
                                byte_offset: 0,
                                byte_length: 0,
                            },
                            annotation: Constructor {
                                name: "float",
                                params: [],
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 46,
                                    byte_length: 5,
                                },
                            },
                            ty: Var {
                                id: uninferred,
                            },
                        },
                    ],
                ),
            },
        ],
        visibility: Private,
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 53,
        },
    },
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 58,
            byte_length: 4,
        },
        generics: [],
        params: [
            Binding {
                pattern: Identifier {
                    identifier: "s",
                    span: Span {
                        file_id: 0,
                        byte_offset: 63,
                        byte_length: 1,
                    },
                    binding: None,
                },
                annotation: Some(
                    Constructor {
                        name: "Shape",
                        params: [],
                        span: Span {
                            file_id: 0,
                            byte_offset: 66,
                            byte_length: 5,
                        },
                    },
                ),
                ty: Var {
                    id: uninferred,
                },
            },
        ],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Match {
                        subject: Identifier {
                            value: "s",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 83,
                                byte_length: 1,
                            },
                            resolution: Unresolved,
                        },
                        arms: [
                            MatchArm {
                                pattern: EnumVariant {
                                    identifier: "Shape.Triangle",
                                    fields: [],
                                    rest: true,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 91,
                                        byte_length: 18,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 113,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "triangle",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 119,
                                                byte_length: 10,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 113,
                                        byte_length: 17,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                            MatchArm {
                                pattern: EnumVariant {
                                    identifier: "Shape.Circle",
                                    fields: [],
                                    rest: true,
                                    resolution: Unresolved,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 136,
                                        byte_length: 16,
                                    },
                                },
                                expression: Call {
                                    expression: Identifier {
                                        value: "print",
                                        ty: Var {
                                            id: uninferred,
                                        },
                                        span: Span {
                                            file_id: 0,
                                            byte_offset: 156,
                                            byte_length: 5,
                                        },
                                        resolution: Unresolved,
                                    },
                                    args: [
                                        Literal {
                                            literal: String {
                                                value: "circle",
                                                raw: false,
                                            },
                                            ty: Var {
                                                id: uninferred,
                                            },
                                            span: Span {
                                                file_id: 0,
                                                byte_offset: 162,
                                                byte_length: 8,
                                            },
                                        },
                                    ],
                                    spread: None,
                                    type_arguments: None,
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 156,
                                        byte_length: 15,
                                    },
                                    call_kind: Unresolved,
                                },
                            },
                        ],
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 77,
                            byte_length: 99,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 73,
                    byte_length: 105,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 55,
            byte_length: 123,
        },
    },
]
