tests/spec/parse/snapshots/field_access_after_call.snap
---
source: tests/spec/parse/mod.rs
description: |
  
  fn test() {
    let x_coord = get_point().x;
  }
---
[
    Function {
        doc: None,
        attributes: [],
        name: "test",
        name_span: Span {
            file_id: 0,
            byte_offset: 4,
            byte_length: 4,
        },
        generics: [],
        params: [],
        return_annotation: Unknown,
        return_type: Var {
            id: uninferred,
        },
        visibility: Private,
        body: Definition(
            Block {
                items: [
                    Let {
                        binding: Binding {
                            pattern: Identifier {
                                identifier: "x_coord",
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 19,
                                    byte_length: 7,
                                },
                                binding: None,
                            },
                            annotation: None,
                            ty: Var {
                                id: uninferred,
                            },
                        },
                        value: DotAccess {
                            expression: Call {
                                expression: Identifier {
                                    value: "get_point",
                                    ty: Var {
                                        id: uninferred,
                                    },
                                    span: Span {
                                        file_id: 0,
                                        byte_offset: 29,
                                        byte_length: 9,
                                    },
                                    resolution: Unresolved,
                                },
                                args: [],
                                spread: None,
                                type_arguments: None,
                                ty: Var {
                                    id: uninferred,
                                },
                                span: Span {
                                    file_id: 0,
                                    byte_offset: 29,
                                    byte_length: 11,
                                },
                                call_kind: Unresolved,
                            },
                            member: "x",
                            ty: Var {
                                id: uninferred,
                            },
                            span: Span {
                                file_id: 0,
                                byte_offset: 29,
                                byte_length: 13,
                            },
                            resolution: Unresolved,
                        },
                        mode: Plain,
                        ty: Var {
                            id: uninferred,
                        },
                        span: Span {
                            file_id: 0,
                            byte_offset: 15,
                            byte_length: 27,
                        },
                    },
                ],
                ty: Var {
                    id: uninferred,
                },
                span: Span {
                    file_id: 0,
                    byte_offset: 11,
                    byte_length: 34,
                },
            },
        ),
        ty: Var {
            id: uninferred,
        },
        span: Span {
            file_id: 0,
            byte_offset: 1,
            byte_length: 44,
        },
    },
]
